--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,22 @@ phases:
   install:
     runtime-versions:
       python: 3.11
+    commands:
+      - echo "Installing dependencies..."
+      - pip install --upgrade pip
+      - pip install boto3 requests pandas pyarrow
+  
+  pre_build:
+    commands:
+      - echo "Preparing Lambda deployment package..."
+      - mkdir -p lambda_package
+      - cp src/data_downloader.py lambda_package/
+      - cd lambda_package
+      - pip install --target . boto3 requests pandas pyarrow
+      - zip -r ../data_downloader.zip .
+      - cd ..
+      - echo "Lambda package created: data_downloader.zip"
+  
   build:
     commands:
       - echo "Packaging CloudFormation templates..."
@@ -13,6 +29,13 @@ phases:
           --s3-bucket ${ARTIFACTS_BUCKET} \
           --s3-prefix "cloudformation-templates" \
           --output-template-file packaged-main.yaml
+      - echo "Uploading Lambda code to S3..."
+      - |
+        aws s3 cp data_downloader.zip \
+          s3://${ARTIFACTS_BUCKET}/lambda-code/data_downloader.zip
+      - echo "Build completed successfully"
+
 artifacts:
   files:
     - packaged-main.yaml
+    - data_downloader.zip
