--- a/infra/iam.yaml
+++ b/infra/iam.yaml
@@ -27,6 +27,7 @@ Resources:
             Action: sts:AssumeRole            
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
+        - arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole
       Policies:
         - PolicyName: !Sub '${ProjectName}-LambdaCustomPolicy'
           PolicyDocument:
