--- a/infra/processing.yaml
+++ b/infra/processing.yaml
@@ -35,6 +35,8 @@ Mappings:
       LayerArn: arn:aws:lambda:us-west-2:336392948345:layer:AWSSDKPandas-Python311:10
     sa-east-1:
       LayerArn: arn:aws:lambda:sa-east-1:336392948345:layer:AWSSDKPandas-Python311:10
+    ap-southeast-1:
+      LayerArn: arn:aws:lambda:ap-southeast-1:336392948345:layer:AWSSDKPandas-Python311:10
     # Adicione outras regiões conforme necessário
 
 Resources:
