--- a/infra/pipeline.yaml
+++ b/infra/pipeline.yaml
@@ -22,11 +22,14 @@ Parameters:
 
 Resources:
 
-  # Role para o AWS CodeBuild
+  # =====================================================
+  # ROLE PARA CODEBUILD
+  # =====================================================
+  
   CodeBuildRole:
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !Sub '${ProjectName}-CodeBuildRole'
+      RoleName: !Sub '${ProjectName}-CodeBuildRole-From-Pipeline'
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
         Statement:
@@ -39,22 +42,159 @@ Resources:
           PolicyDocument:
             Version: '2012-10-17'
             Statement:
-              - Effect: Allow
-                Action:
-                  - 's3:GetObject'
-                  - 's3:PutObject'
-                  - 's3:ListBucket'
-                Resource: '*' # Limitado ao bucket de artefatos pelo CodePipeline
+              # Permissões CloudWatch Logs
               - Effect: Allow
                 Action:
                   - 'logs:CreateLogGroup'
                   - 'logs:CreateLogStream'
                   - 'logs:PutLogEvents'
-                Resource: !Sub 'arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${ProjectName}-BuildProject:*'
+                Resource: '*'
+              
+              # Permissões S3 para artefatos
               - Effect: Allow
                 Action:
-                  - 'cloudformation:*'
-                Resource: '*' # Necessário para empacotar e implantar
+                  - 's3:GetObject'
+                  - 's3:PutObject'
+                  - 's3:ListBucket'
+                  - 's3:GetBucketLocation'
+                Resource: '*'
+              
+              # Permissões CloudFormation
+              - Effect: Allow
+                Action:
+                  - 'cloudformation:CreateStack'
+                  - 'cloudformation:UpdateStack'
+                  - 'cloudformation:DescribeStacks'
+                  - 'cloudformation:DescribeStackEvents'
+                  - 'cloudformation:DescribeStackResources'
+                  - 'cloudformation:GetTemplate'
+                  - 'cloudformation:ValidateTemplate'
+                Resource: '*'
+              
+              # Permissões IAM para criar recursos
+              - Effect: Allow
+                Action:
+                  - 'iam:CreateRole'
+                  - 'iam:DeleteRole'
+                  - 'iam:GetRole'
+                  - 'iam:PassRole'
+                  - 'iam:AttachRolePolicy'
+                  - 'iam:DetachRolePolicy'
+                  - 'iam:PutRolePolicy'
+                  - 'iam:DeleteRolePolicy'
+                  - 'iam:CreateInstanceProfile'
+                  - 'iam:DeleteInstanceProfile'
+                  - 'iam:AddRoleToInstanceProfile'
+                  - 'iam:RemoveRoleFromInstanceProfile'
+                Resource: '*'
+              
+              # Permissões Lambda
+              - Effect: Allow
+                Action:
+                  - 'lambda:CreateFunction'
+                  - 'lambda:UpdateFunctionCode'
+                  - 'lambda:UpdateFunctionConfiguration'
+                  - 'lambda:DeleteFunction'
+                  - 'lambda:GetFunction'
+                  - 'lambda:ListFunctions'
+                  - 'lambda:CreateAlias'
+                  - 'lambda:UpdateAlias'
+                  - 'lambda:DeleteAlias'
+                  - 'lambda:AddPermission'
+                  - 'lambda:RemovePermission'
+                  - 'lambda:CreateEventSourceMapping'
+                  - 'lambda:DeleteEventSourceMapping'
+                Resource: '*'
+              
+              # Permissões DynamoDB
+              - Effect: Allow
+                Action:
+                  - 'dynamodb:CreateTable'
+                  - 'dynamodb:DeleteTable'
+                  - 'dynamodb:DescribeTable'
+                  - 'dynamodb:UpdateTable'
+                  - 'dynamodb:CreateGlobalTable'
+                  - 'dynamodb:UpdateGlobalTable'
+                  - 'dynamodb:DescribeGlobalTable'
+                  - 'dynamodb:ListGlobalTables'
+                  - 'dynamodb:TagResource'
+                  - 'dynamodb:UntagResource'
+                Resource: '*'
+              
+              # Permissões EC2
+              - Effect: Allow
+                Action:
+                  - 'ec2:CreateVpc'
+                  - 'ec2:DeleteVpc'
+                  - 'ec2:DescribeVpcs'
+                  - 'ec2:CreateSubnet'
+                  - 'ec2:DeleteSubnet'
+                  - 'ec2:DescribeSubnets'
+                  - 'ec2:CreateSecurityGroup'
+                  - 'ec2:DeleteSecurityGroup'
+                  - 'ec2:DescribeSecurityGroups'
+                  - 'ec2:AuthorizeSecurityGroupIngress'
+                  - 'ec2:AuthorizeSecurityGroupEgress'
+                  - 'ec2:RevokeSecurityGroupIngress'
+                  - 'ec2:RevokeSecurityGroupEgress'
+                  - 'ec2:CreateInternetGateway'
+                  - 'ec2:DeleteInternetGateway'
+                  - 'ec2:AttachInternetGateway'
+                  - 'ec2:DetachInternetGateway'
+                  - 'ec2:CreateRouteTable'
+                  - 'ec2:DeleteRouteTable'
+                  - 'ec2:CreateRoute'
+                  - 'ec2:DeleteRoute'
+                  - 'ec2:AssociateRouteTable'
+                  - 'ec2:DisassociateRouteTable'
+                  - 'ec2:DescribeRouteTables'
+                  - 'ec2:DescribeInternetGateways'
+                  - 'ec2:CreateNatGateway'
+                  - 'ec2:DeleteNatGateway'
+                  - 'ec2:DescribeNatGateways'
+                  - 'ec2:AllocateAddress'
+                  - 'ec2:ReleaseAddress'
+                  - 'ec2:DescribeAddresses'
+                  - 'ec2:CreateLaunchTemplate'
+                  - 'ec2:DeleteLaunchTemplate'
+                  - 'ec2:DescribeLaunchTemplates'
+                  - 'ec2:CreateTags'
+                  - 'ec2:DescribeTags'
+                Resource: '*'
+              
+              # Permissões SQS
+              - Effect: Allow
+                Action:
+                  - 'sqs:CreateQueue'
+                  - 'sqs:DeleteQueue'
+                  - 'sqs:GetQueueAttributes'
+                  - 'sqs:SetQueueAttributes'
+                  - 'sqs:TagQueue'
+                  - 'sqs:UntagQueue'
+                Resource: '*'
+              
+              # Permissões EventBridge Scheduler
+              - Effect: Allow
+                Action:
+                  - 'scheduler:CreateSchedule'
+                  - 'scheduler:DeleteSchedule'
+                  - 'scheduler:GetSchedule'
+                  - 'scheduler:UpdateSchedule'
+                  - 'scheduler:ListSchedules'
+                  - 'scheduler:TagResource'
+                  - 'scheduler:UntagResource'
+                Resource: '*'
+              
+              # Permissões CloudWatch Logs
+              - Effect: Allow
+                Action:
+                  - 'logs:CreateLogGroup'
+                  - 'logs:DeleteLogGroup'
+                  - 'logs:DescribeLogGroups'
+                  - 'logs:PutRetentionPolicy'
+                  - 'logs:TagLogGroup'
+                  - 'logs:UntagLogGroup'
+                Resource: '*'
 
   # Role para o AWS CloudFormation
   CloudFormationRole:
@@ -98,7 +238,10 @@ Resources:
       ConnectionName: !Sub '${ProjectName}-GitConnect'
       ProviderType: GitHub
 
-  # Role para o CodePipeline
+  # =====================================================
+  # ROLE PARA CODEPIPELINE
+  # =====================================================
+  
   CodePipelineRole:
     Type: AWS::IAM::Role
     Properties:
@@ -115,24 +258,37 @@ Resources:
           PolicyDocument:
             Version: '2012-10-17'
             Statement:
+              # Permissões S3 para artefatos
               - Effect: Allow
                 Action:
                   - 's3:GetObject'
                   - 's3:PutObject'
                   - 's3:ListBucket'
-                Resource: !Sub 'arn:aws:s3:::${ArtifactsBucket}/*'
+                  - 's3:GetBucketLocation'
+                Resource: '*'
+              
+              # Permissões CodeBuild
               - Effect: Allow
                 Action:
-                  - 'codestar-connections:UseConnection'
-                Resource: !Ref GitHubConnection
-              - Effect: Allow
-                Action:
-                  - 'codebuild:StartBuild'
                   - 'codebuild:BatchGetBuilds'
-                Resource: !GetAtt CodeBuildProject.Arn
+                  - 'codebuild:StartBuild'
+                Resource: '*'
+              
+              # Permissões CloudFormation
               - Effect: Allow
                 Action:
-                  - 'cloudformation:*'
+                  - 'cloudformation:CreateStack'
+                  - 'cloudformation:UpdateStack'
+                  - 'cloudformation:DescribeStacks'
+                  - 'cloudformation:DescribeStackEvents'
+                  - 'cloudformation:DescribeStackResources'
+                  - 'cloudformation:GetTemplate'
+                  - 'cloudformation:ValidateTemplate'
+                Resource: '*'
+              
+              # Permissões IAM
+              - Effect: Allow
+                Action:
                   - 'iam:PassRole'
                 Resource: '*'
 
